--- a/html_study/tribute_page.html
+++ b/html_study/tribute_page.html
@@ -8,15 +8,17 @@
 </head>
 <body>
 <main id="main">
+    <h4 id="identify">武汉大学弘毅学堂2018级辛嘉宇</h4>
+    <p id="identify">我的邮箱:<span id="email">925823049@qq.com</span></p>
     <h1 id="title">Dr.Norman Borlaug</h1>
     <p>The man who saved a billon lives</p>
-    <div id="img-div">
+    <figure id="img-div">
         <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg">
-        <p id="image-caption">
+        <figcaption id="image-caption">
             Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how
             to increase wheat yields - part of his life-long war on hunger.
-        </p>
-    </div>
+        </figcaption>
+    </figure>
     <div id="tribute-info">
         <h2>Here's a time line of Dr.Borlaug's life:</h2>
         <ul>
@@ -69,15 +71,48 @@
             <li>
                 <strong>1953</strong>-Born in Cresco,lowa
             </li>
-            <li><strong>1962</strong>-Born in Cresco,lowa</li>
-            <li><strong>1970</strong>-Born in Cresco,lowa</li>
-            <li><strong>1983</strong>-Born in Cresco,lowa</li>
-            <li><strong>1984</strong>-Born in Cresco,lowa</li>
-            <li><strong>2005</strong>-Born in Cresco,lowa</li>
-            <li><strong>2009</strong>-Born in Cresco,lowa</li>
-
+            <li>
+                <strong>1962</strong> - Visits Delhi and brings his 
+                high-yielding strains of wheat to the Indian subcontinent in
+                 time to help mitigate mass starvation due to a rapidly
+                  expanding population
+            </li>
+            <li>
+                <strong>1970</strong> - receives the Nobel Peace Prize
+            </li>
+            <li>
+                <strong>1983</strong> - helps seven African countries 
+                dramatically increase their maize and sorghum yields
+            </li>
+            <li>
+                <strong>1984</strong> - becomes a distinguished professor
+                 at Texas A&M University
+            </li>
+            <li>
+                <strong>2005</strong> - states "we will have to double the 
+                world food supply by 2050." Argues that genetically modified 
+                crops are the only way we can meet the demand, as we run out 
+                of arable land. Says that GM crops are not inherently dangerous
+                 because "we've been genetically modifying plants and animals for
+                  a long time. Long before we called it science, people were 
+                  selecting the best breeds."
+            </li>
+            <li>
+                <strong>2009</strong> - dies at the age of 95.
+            </li>
         </ul>
-
+        <blockquote>
+            <p>
+                "Borlaug's life and achievement are testimony to the far-reaching
+                contribution that one man's towering intellect, persistence and
+                scientific vision can make to human peace and progress."
+            </p>
+            <cite>-- Indian Prime Minister Manmohan Singh</cite>
+        </blockquote>
+        <h3>
+            If you have time,you should read more about this incredible hunman being
+            on his <a id="tribute_link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>
+        </h3>
     </div>
 
 </main>
