--- a/html_study/tribute_page.html
+++ b/html_study/tribute_page.html
@@ -14,7 +14,7 @@
     <p>The man who saved a billon lives</p>
     <figure id="img-div">
         <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg">
-        <figcaption id="image-caption">
+        <figcaption id="img-caption">
             Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how
             to increase wheat yields - part of his life-long war on hunger.
         </figcaption>
@@ -111,7 +111,7 @@
         </blockquote>
         <h3>
             If you have time,you should read more about this incredible hunman being
-            on his <a id="tribute_link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>
+            on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>
         </h3>
     </div>
 
